New docs for multiple payment functionality

--- a/source/includes/api/bill/_object.md.erb
+++ b/source/includes/api/bill/_object.md.erb
@@ -4,6 +4,7 @@
 
 ```json
 {
+  "_id": "579b695decea110719b1874d",
   "balance": "100",
   "dueDate": "<%= config.futureDate %>",
   "status": {
@@ -19,6 +20,7 @@
 
 Attribute | Description
 --------- | -----------
+`_id` | ID of the bill.
 `balance` | Current bill balance.
 `dueDate` | Current bill due date.
 `lastPaidAmount` | Amount of last payment.
