--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -30,7 +30,10 @@ includes:
   - api/payment/status
   - api/payment/add
   - api/payment/get
+  - api/payment/remove
   - api/payment/retry
+  - api/payment/set-default
+  - api/payment/assign
   - api/payment/autopay
   - api/payment/make
   - api/user/index
