--- a/source/includes/api/payment/_object.md.erb
+++ b/source/includes/api/payment/_object.md.erb
@@ -4,18 +4,26 @@
 
 ```json
 {
+  "_id": "580e3e11dec21e861b5a3719",
+  "type": "card",
+  "status": "verified",
+  "default": true,
   "card": {
     "number": "XXXX0005",
     "brand": "american express",
     "type": "credit",
     "expDate": "2019-06-01T12:00:00.000Z"
   },
-  "status": "verified"
+  "assignedBills": [ "580e3e11dec21e861b5a3719" ]
 }
 ```
 
 Attribute | Description
 --------- | -----------
+`_id` | ID of the payment method.
+`type` | The type of the payment method on file. Possible values are `card`, `bank`.
+`status` | The status of the payment method on file. Possible values are `verified`, `declined`.
+`default` | If this is the default payment method. Default means that it will pay any bills not specifically assigned a payment method.
+`assignedBills` | A list of bill ID's this payment method was specifically assigned to.
 `card` | Card object
 `bank` | Bank object
-`status` | The status of the payment method on file. Possible values are `not-linked`, `verified`, `failed`.
