Sandbox `type` helper

--- a/source/includes/api/payment/_get.md.erb
+++ b/source/includes/api/payment/_get.md.erb
@@ -46,7 +46,7 @@
 }
 ```
 
-Retrieve a list of payment methods on file for a user.
+Retrieve a list of payment methods on file for a user. When in Sandbox, `type` will be `credit` and `brand` will be `visa`.
 
 ### HTTP Request
 
