--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -22,6 +22,7 @@ under the License.
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="images/favicon.ico" rel="icon" type="image/x-icon">
     <title><%= current_page.data.title || "API Documentation" %></title>
+    <meta name="description" content="API for bill payments. Rent, electric, phone, loan, tv, you name it.">
 
     <style>
       <%= Rouge::Themes::Base16::Monokai.render(:scope => '.highlight') %>
