--- a/source/includes/api/bill/_index.md.erb
+++ b/source/includes/api/bill/_index.md.erb
@@ -1,3 +1,3 @@
-# Bill API
+# Bill
 
 The bill object provides you with up-to-date balance, due date, and payment history for a bill. The API allows you to retrieve, list, and check the status of a user's bills.
