--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -36,8 +36,8 @@ includes:
   - api/payment/assign
   - api/payment/autopay
   - api/payment/make
-  - api/user/index
-  - api/user/create
+  - api/client/index
+  - api/client/create-token
 
 search: true
 ---
