--- a/source/includes/api/company/_index.md.erb
+++ b/source/includes/api/company/_index.md.erb
@@ -1,3 +1,3 @@
-# Company API
+# Company
 
 Company objects allow you to authenticate bills with your users. The API allows you to retrieve and search for companies.
