Fix client response

--- a/source/includes/api/client/_create-token.md.erb
+++ b/source/includes/api/client/_create-token.md.erb
@@ -49,4 +49,4 @@ Param | Description
 
 Attribute | Description
 --------- | -----------
-`clientId` | Unbill client ID you can persist in your DB for future requests.
+`token` | The token to be used for SSO into applications.
