--- a/source/includes/api/company/_search.md.erb
+++ b/source/includes/api/company/_search.md.erb
@@ -4,21 +4,21 @@
 
 ```json
 {
-  "unbillKey": "<%= config.auth %>",
+  "apiKey": "<%= config.auth %>",
   "query": "Netflix"
 }
 ```
 
 ```json
 {
-  "unbillKey": "<%= config.auth %>",
+  "apiKey": "<%= config.auth %>",
   "category": "gas"
 }
 ```
 
 ```json
 {
-  "unbillKey": "<%= config.auth %>",
+  "apiKey": "<%= config.auth %>",
   "geo": {
 	"lat": "40.233845",
   	"lng": "-111.658531"
