--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -8,15 +8,18 @@ includes:
   - resources
   - api/auth/index
   - api/auth/auth
+  - api/auth/item
   - api/auth/auth-step
+  - api/auth/object
+  - api/auth/status
+  - api/auth/list
+  - api/auth/fix-hold
+  - api/auth/remove
   - api/bill/index
   - api/bill/object
   - api/bill/status
-  - api/bill/headline
-  - api/bill/detail
-  - api/bill/overview
-  - api/bill/fix-hold
-  - api/bill/remove
+  - api/bill/details
+  - api/bill/list
   - api/company/index
   - api/company/object
   - api/company/logos
@@ -29,7 +32,7 @@ includes:
   - api/payment/object
   - api/payment/status
   - api/payment/add
-  - api/payment/get
+  - api/payment/list
   - api/payment/remove
   - api/payment/retry
   - api/payment/set-default
