--- a/source/includes/_authentication.md.erb
+++ b/source/includes/_authentication.md.erb
@@ -1,3 +1,3 @@
 ## Authentication
 
-Every request made must include your `unbillKey` token provided to you. If the `unbillKey` is not passed in the `POST` request, you will receive a `401 Not Authorized` response.
+Every request made must include your `apiKey` token provided to you. If the `apiKey` is not passed in the `POST` request, you will receive a `401 Not Authorized` response.
