--- a/source/includes/_getting-started.md.erb
+++ b/source/includes/_getting-started.md.erb
@@ -10,8 +10,8 @@
 
 ```json
 {
-  "unbillKey": "<%= config.auth %>",
-  "userId": "566595c8ce88ccec69328566",
+  "apiKey": "<%= config.auth %>",
+  "clientId": "566595c8ce88ccec69328566",
   "companyId": "56e1dbb5443b10a3bd403fcf",
   "form": {
     "username": "Johnny",
@@ -36,19 +36,19 @@ To authenticate bills with your users, you may use the following flow.
 ### User Creation
 
 1. User signs up in your app.
-2. Make a request to the `/user/create` endpoint to retrieve an Unbill `userId` to store in your database for future requests.
+2. Make a request to the `/client/add` endpoint to retrieve an Unbill `clientId` to store in your database for future requests.
 
 ### Bill Authentication
 
 1. Search for the company you'd like to add from the `/company/search` endpoint.
 2. Provide your user with a "bill authentication" view populated with the login fields retrieved from the desired company.
 3. Have your user fill out their credentials, and then send those credentials to the `/auth` endpoint.
-4. Unbill will begin the authentication process and if successful, will return available bill data.
+4. Unbill will begin the authentication process and if successful, will return available `items`.
 
 ### Bill Overview
 
-1. Requests can be made to the `/bill/overview` endpoint to retrieve the list of authenticated bills and balance information.
-2. Requests can be made to the `/bill/detail` endpoint to retrieve details on a specific bill.
+1. Requests can be made to the `/bill/list` endpoint to retrieve the list of authenticated bills and balance information.
+2. Requests can be made to the `/bill/details` endpoint to retrieve details on a specific bill.
 
 ### Payments
 
