--- a/source/includes/api/client/_create-token.md.erb
+++ b/source/includes/api/client/_create-token.md.erb
@@ -4,7 +4,7 @@
 
 ```json
 {
-  "unbillKey": "<%= config.auth %>",
+  "apiKey": "<%= config.auth %>",
   "identifier": "unique-user-id",
   "nonce": true,
   "meta": {
