--- a/source/includes/api/company/_get.md.erb
+++ b/source/includes/api/company/_get.md.erb
@@ -4,7 +4,7 @@
 
 ```json
 {
-  "unbillKey": "<%= config.auth %>",
+  "apiKey": "<%= config.auth %>",
   "companyId": "56e1dbb5443b10a3bd403fcf"
 }
 ```
