--- a/source/includes/api/payment/_make.md.erb
+++ b/source/includes/api/payment/_make.md.erb
@@ -4,9 +4,8 @@
 
 ```json
 {
-  "unbillKey": "<%= config.auth %>",
-  "userId": "566595c8ce88ccec69328566",
-  "companyId": "56e1dbb5443b10a3bd403fcf"
+  "apiKey": "<%= config.auth %>",
+  "billId": "566595c8ce88ccec69328566"
 }
 ```
 
@@ -14,7 +13,7 @@
 
 ```json
 {
-  "message": "Please provide userId and companyId."
+  "message": "Please provide a billId to make a payment for."
 }
 ```
 
@@ -28,8 +27,7 @@ Make a payment towards this company's outstanding balance.
 
 Param | Description
 ----- | -----------
-`userId` | Unbill user ID.
-`companyId` | Unbill company ID.
+`billId` | Unbill bill ID.
 
 ### Returns
 
