--- a/source/includes/api/payment/_remove.md.erb
+++ b/source/includes/api/payment/_remove.md.erb
@@ -4,7 +4,7 @@
 
 ```json
 {
-  "unbillKey": "<%= config.auth %>",
+  "apiKey": "<%= config.auth %>",
   "paymentMethodId": "566595c8ce88ccec69328566"
 }
 ```
