--- a/source/includes/api/auth/_fix-hold.md.erb
+++ b/source/includes/api/auth/_fix-hold.md.erb
@@ -29,4 +29,4 @@ Param | Description
 
 ### Returns
 
-Returns a `200` status code if a auth was successfully removed. Returns an error otherwise.
+Returns a `200` status code if an auth's hold was marked as being resolved. Returns an error otherwise.
