--- a/source/includes/api/auth/_object.md.erb
+++ b/source/includes/api/auth/_object.md.erb
@@ -6,7 +6,7 @@
 {
   "_id": "579b695decea110719b1874d",
   "status": {
-    "type": "validated"
+    "type": "verified"
   },
   "company": {
     "_id": "579b695decea110719b1874d",
