--- a/source/includes/api/auth/_remove.md.erb
+++ b/source/includes/api/auth/_remove.md.erb
@@ -31,4 +31,4 @@ Param | Description
 
 ### Returns
 
-Returns a `200` response if the `auth` and its `items` was removed successfully.
+Returns a `200` response if the `auth` and its `items` was successfully removed.
