--- a/source/includes/api/auth/_status.md.erb
+++ b/source/includes/api/auth/_status.md.erb
@@ -28,7 +28,8 @@
     "type": "hold"
   },
   "reason": {
-    "text": "You need to login and verify your account information."
+    "userMessage": "You need to login and verify your account information.",
+    "debugMessage": "The user has not verified their online account."
   }
 }
 ```
