--- a/source/includes/api/bill/_object.md.erb
+++ b/source/includes/api/bill/_object.md.erb
@@ -8,7 +8,7 @@
   "balance": "100",
   "dueDate": "<%= config.futureDate %>",
   "status": {
-    "type": "upcoming",
+    "type": "upcoming"
   },
   "settings": {
     "autopay": true 
