--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -40,6 +40,7 @@ includes:
   - api/payment/autopay
   - api/payment/make
   - api/client/index
+  - api/client/create
   - api/client/create-token
 
 search: true
