--- a/source/includes/api/auth/_list.md.erb
+++ b/source/includes/api/auth/_list.md.erb
@@ -16,7 +16,7 @@
   {
     "_id": "579b695decfa11012711875d",
     "status": {
-      "type": "validated"
+      "type": "verified"
     },
     "company": {
       "_id": "579b695decea110719b1874d",
